--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Evlx3.github.io/First-React-Project",
+  "homepage": "http://evlx3.github.io/First-React-Project",
   "name": "second-react-project",
   "version": "0.1.0",
   "private": true,
